--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Ping Sample</string>
-    <string name="show_picker">Ping!</string>
+    <string name="show_picker" translatable="false">Ping!</string>
 </resources>
